Bug 412360 - Download Manager remains empty, downloads don't start, with this 3.0b2 downloads.sqlite. r=sdwilsh, r=biesi, sr=biesi, b-ff3=beltzner